Start adding a Zero Trust Access docs section
Backports #55991

The goal for organizing the documentation is to include a top-level
section for each main Teleport product in order to prevent discrepancies
between other public-facing Teleport materials and the documentation.
This change moves some existing docs sections into a new, top-level
section for Teleport Zero Trust Access.

- SSO: Makes this a child section of ZTA since it is a prominent
  Teleport feature.
- Compliance frameworks: Makes this a child of ZTA since compliance is
  featured on the ZTA landing page
  (https://goteleport.com/platform/zero-trust-access/).
- Export audit events: A prominent feature like SSO is. Moving from
  "Management", which is an ambiguous category.
- Infrastructure as code: We want to remove Admin Guides, since the new
  product-based organization makes the purpose of this section vague.
  Moving the IaC section is one step toward that purpose.

--- a/docs/pages/admin-guides/access-controls/access-controls.mdx
+++ b/docs/pages/admin-guides/access-controls/access-controls.mdx
@@ -44,7 +44,7 @@ automatically assigns roles to the user based on data provided by the IdP. This
 means that you can implement a fully fledged infrastructure RBAC system based on
 your existing Single Sign-On solution.
 
-Read our [Single Sign-On guide](sso/sso.mdx) to get started.
+Read our [Single Sign-On guide](../../zero-trust-access/sso/sso.mdx) to get started.
 
 ## Enable Access Requests
 
@@ -67,8 +67,8 @@ Teleport's RBAC features make it easier to manage access to your infrastructure
 in order to satisfy compliance requirements. Learn how to use Teleport to
 achieve compliance with:
 
-- [FedRAMP](./compliance-frameworks/fedramp.mdx)
-- [SOC 2](./compliance-frameworks/soc2.mdx)
+- [FedRAMP](../../zero-trust-access/compliance-frameworks/fedramp.mdx)
+- [SOC 2](../../zero-trust-access/compliance-frameworks/soc2.mdx)
 
 ## Find out more
 
