--- a/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/rbac.mdx
+++ b/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/rbac.mdx
@@ -288,14 +288,14 @@ If you plan to skip this step, make sure to remove the `module "saml"` or
    guides assume you are using `tctl` instead of Terraform to manage
    authentication connectors:
 
-   - [AD FS](../../../admin-guides/access-controls/sso/adfs.mdx#step-13-configure-adfs)
-   - [GitLab](../../../admin-guides/access-controls/sso/gitlab.mdx#step-14-configure-gitlab)
+   - [AD FS](../../sso/adfs.mdx#step-13-configure-adfs)
+   - [GitLab](../../sso/gitlab.mdx#step-14-configure-gitlab)
    - [Google
-     Workspace](../../../admin-guides/access-controls/sso/google-workspace.mdx#step-14-configure-google-workspace)
-   - [OneLogin](../../../admin-guides/access-controls/sso/one-login.mdx#step-13-create-teleport-application-in-onelogin)
+     Workspace](../../sso/google-workspace.mdx#step-14-configure-google-workspace)
+   - [OneLogin](../../sso/one-login.mdx#step-13-create-teleport-application-in-onelogin)
    - [Azure
-     AD](../../../admin-guides/access-controls/sso/azuread.mdx#step-13-configure-azure-ad)
-   - [Okta](../../../admin-guides/access-controls/sso/okta.mdx#step-24-configure-okta)
+     AD](../../sso/azuread.mdx#step-13-configure-azure-ad)
+   - [Okta](../../sso/okta.mdx#step-24-configure-okta)
 
 1. Configure the redirect URL (for OIDC) or assertion consumer service (for SAML):
 
