fix demo name typo

--- a/docs/pages/enroll-resources/mcp-access/getting-started.mdx
+++ b/docs/pages/enroll-resources/mcp-access/getting-started.mdx
@@ -117,8 +117,8 @@ In addition, you can use --client-config=<path> to specify a config file locatio
 For example, you can update a Cursor project using --client-config=<path-to-project>/.cursor/mcp.json
 ```
 
-Once your MCP client configuration is updated, you will see
-`teleport-mcp-everything` MCP server in your MCP client.
+Once your MCP client configuration is updated, you will find
+the Teleport demo MCP server in your MCP client.
 
 ## Next Steps
 
