--- a/docs/pages/machine-workload-identity/machine-id/deployment/bound-keypair.mdx
+++ b/docs/pages/machine-workload-identity/machine-id/deployment/bound-keypair.mdx
@@ -187,4 +187,10 @@ Replace the following:
 - [More information about `TELEPORT_ANONYMOUS_TELEMETRY`.](../../../reference/machine-id/telemetry.mdx)
 
 [secret]: ../../../reference/join-methods.mdx#secret-vs-delegated
+[guide]: ../../../reference/machine-id/machine-id.mdx
+
+{/*
+TODO: guide link above is a placeholder, link to the real guide once merged in
+follow-up PR.
 [guide]: ../../../reference/machine-id/bound-keypair.mdx
+*/}
