--- a/docs/pages/model-context-protocol/model-context-protocol.mdx
+++ b/docs/pages/model-context-protocol/model-context-protocol.mdx
@@ -11,10 +11,4 @@ Secure Large Language Model (LLM) interactions with infrastructure using Telepor
 [Model Context Protocol](https://goteleport.com/use-cases/secure-model-context-protocol/) (MCP), 
 delivering fine-grained access control and audit between LLMs and data sources or MCP servers.
 
-<Admonition type="tip">
-
-MCP support is coming soon.
-
-Want to be notified when it's available? Sign up for [Early Access](https://goteleport.com/mcp-early-access/)!
-
-</Admonition>
+<DocCardList />
