--- a/docs/pages/includes/provision-token/spacelift-spec.mdx
+++ b/docs/pages/includes/provision-token/spacelift-spec.mdx
@@ -14,12 +14,14 @@ spec:
   spacelift:
     # hostname should be the hostname of your Spacelift tenant.
     hostname: example.app.spacelift.io
+    # enable_glob_matching enables glob-style matching for the allow rules.
+    enable_glob_matching: true
     # allow specifies rules that control which Spacelift executions will be
     # granted access. Those not matching any allow rule will be denied.
     allow:
       # space_id identifies the space that the module or stack resides within.
       #
-      # This field supports glob-style matching:
+      # This field supports glob-style matching when the enable_glob_matching field is true:
       # - Use '*' to match zero or more characters.
       # - Use '?' to match any single character.
     - space_id: root
@@ -27,7 +29,7 @@ spec:
       caller_type: stack
       # caller_id is the id of the caller. e.g the name of the stack or module.
       #
-      # This field supports glob-style matching:
+      # This field supports glob-style matching when the enable_glob_matching field is true:
       # - Use '*' to match zero or more characters.
       # - Use '?' to match any single character.
       caller_id: my-stack
