--- a/docs/pages/reference/operator-resources/resources-teleport-dev-provisiontokens.mdx
+++ b/docs/pages/reference/operator-resources/resources-teleport-dev-provisiontokens.mdx
@@ -250,6 +250,7 @@ resource, which you can apply after installing the Teleport Kubernetes operator.
 |Field|Type|Description|
 |---|---|---|
 |allow|[][object](#specspaceliftallow-items)|Allow is a list of Rules, nodes using this token must match one allow rule to use this token.|
+|enable_glob_matching|boolean|EnableGlobMatching enables glob-style matching for the space_id and caller_id fields in the rules.|
 |hostname|string|Hostname is the hostname of the Spacelift tenant that tokens will originate from. E.g `example.app.spacelift.io`|
 
 ### spec.spacelift.allow items
