Fix Machine ID -> Machine & Workload Identity naming

--- a/docs/pages/identity-governance/locking.mdx
+++ b/docs/pages/identity-governance/locking.mdx
@@ -22,8 +22,8 @@ A lock can target the following objects or attributes:
   cluster)
 - a Windows desktop by the desktop's name
 - an [Access Request](access-requests/access-requests.mdx) by UUID
-- a bot instance ID (for Machine ID bots)
-- a join token name (for Machine ID bots using a [delegated join method](../reference/join-methods.mdx#delegated-join-methods))
+- a bot instance ID (for Machine & Workload Identity bots)
+- a join token name (for Machine & Workload Identity bots using a [delegated join method](../reference/join-methods.mdx#delegated-join-methods))
 
 ## Prerequisites
 
