Update more Machine & Workload Identity references

--- a/docs/pages/identity-governance/locking.mdx
+++ b/docs/pages/identity-governance/locking.mdx
@@ -85,9 +85,9 @@ with one of the following options:
   # Created a lock with name "dc7cee9d-fe5e-4534-a90d-db770f0234a1".
   ```
   </TabItem>
-  <TabItem label="Machine ID Bot">
-  The most appropriate locking target for a Machine ID bot depends on its join
-  method.
+  <TabItem label="Machine & Workload Identity Bot">
+  The most appropriate locking target for a Machine & Workload Identity bot
+  depends on its join method.
 
   For [delegated join methods](../reference/join-methods.mdx#secret-vs-delegated),
   it's best to target the specific join token the bot is using to join:
