--- a/docs/pages/reference/join-methods.mdx
+++ b/docs/pages/reference/join-methods.mdx
@@ -262,7 +262,7 @@ Or as Teleport resources:
 When a Machine ID bot uses an ephemeral join token, the token is deleted.
 
 <Admonition type="tip" title="Upgrade to Bound Keypair">
-New Machine ID bot deployments should consider upgrading to the
+New Machine & Workload Identity bot deployments should consider upgrading to the
 [`bound_keypair` join method](#bound-keypair-bound_keypair).
 </Admonition>
 
