--- a/docs/pages/enroll-resources/mcp-access/troubleshooting.mdx
+++ b/docs/pages/enroll-resources/mcp-access/troubleshooting.mdx
@@ -25,5 +25,10 @@ spec:
       - "{{internal.mcp_tools}}"
 ```
 
+You can configure this user trait with `tctl`:
+```code
+$ tctl users update <Var name="my_user" /> --set-mcp-tools "*"
+```
+
 Alternatively you can define a custom role that explicitly specifies the allowed
 MCP tools and assigns them to users. See [RBAC](./rbac.mdx) for more details.
