Update docs to match support for unix sockets

--- a/docs/pages/reference/cli/tctl.mdx
+++ b/docs/pages/reference/cli/tctl.mdx
@@ -1856,15 +1856,17 @@ Reports diagnostic information.
 $ tctl top [<diag-addr>] [<refresh>]
 ```
 
-When a specific endpoint is provided, `tctl top` will always attempt to connect to it, in this case
-the diagnostic metrics endpoint must be enabled with `teleport start --diag-addr=<bind-addr>`.
+When a specific endpoint is provided, `tctl top` will always attempt to connect to it. The endpoint can be a HTTP URL or
+a valid local UNIX socket path in a URI format (such as `unix:///var/lib/teleport/debug.sock`).
+
+In the case of a HTTP endpoint the diagnostic metrics service must be enabled with `teleport start --diag-addr=<bind-addr>`.
 
 When no endpoint is specified, `tctl top` will attempt to connect via the debug UNIX socket endpoint, falling back to
 localhost.
 
 ### Argument
 
-- `[<diag-addr>]` Diagnostic HTTP URL (HTTPS not supported)
+- `[<diag-addr>]` Diagnostic HTTP URL (HTTPS not supported) or UNIX socket.
 - `[<refresh>]` Refresh period e.g. `5s`, `2m`, or `3h`
 
 ### Example
@@ -1874,6 +1876,8 @@ $ sudo teleport start --diag-addr=127.0.0.1:3000
 # View stats with a refresh period of 5 seconds
 $ tctl top http://127.0.0.1:3000 5s
 # View stats using the debug service socket
+$ tctl top unix:///var/lib/teleport/debug.sock 5s
+# Use configured defaults for local node
 $ tctl top
 ```
 
