--- a/docs/pages/identity-governance/entra-id.mdx
+++ b/docs/pages/identity-governance/entra-id.mdx
@@ -14,14 +14,14 @@ Entra ID integration enables the following features in Teleport:
 3. **Group sync:** Imports Entra ID groups as Teleport
    Access Lists. 
 4. **Application sync (Optional):** Imports Entra ID applications. 
-5. **Integration with Identity Security (Optional):** Configures Identity Security integration that lets 
-you analyze policy and access paths. 
+5. **Integration with Teleport Identity Security (Optional):** Lets you analyze user access paths
+and policies from the Teleport Identity Security product. 
 
 ## How it works
 
 An enterprise application will be configured in the Entra ID. 
 The purpose of this application is twofold - 
-1. Set up a SAML SSO provider for Teleport 
+1. Set up a SAML SSO provider for Teleport. 
 2. Set up Microsoft graph API credential for Teleport that allows to fetch resources 
 from Entra ID directory to Teleport.  
 
@@ -29,30 +29,30 @@ Once the integration is configured, Teleport periodically imports users, groups,
 and applications into Teleport.
 
 The installation process provides an option to extend Entra ID integration with the 
-Identity Security product. If you enable it, you [link access graph]
+Teleport Identity Security product, which offers user [access path and policy analysis](../identity-security/integrations/entra-id.mdx).
 
 ### Choosing an authentication method
 
-In order to authenticate with Microsoft Graph API and fetch resources from Entra ID, 
-Teleport can be configured as an OIDC IdP for Entra ID enterprise application,
-or set up with a system credential that grants access to Microsoft graph API. 
+In order to fetch resources from the Entra ID directory, Teleport needs to be 
+configured with credential that grants access to the Microsoft Graph API. 
 
 #### Teleport as an OIDC Provider for Entra ID 
 
-In this setup, Teleport is configured as an OpenID Connect (OIDC) identity provider, establishing a trusted
-connection with an Entra ID application created during setup. This trust allows Teleport to authenticate using
-the Entra ID application, accessing permissions tied to it without requiring additional credentials or managed
-Identities.
+In this setup, Teleport is configured as an OpenID Connect (OIDC) identity provider, 
+establishing a trusted connection with an Entra ID application created during setup. 
+This trust allows Teleport to authenticate using the Entra ID application, accessing 
+permissions tied to it without requiring additional credentials or managed Identities.
 
-Direct bidirectional connectivity between Teleport and Azure is necessary for Azure to validate the OIDC
-tokens issued by Teleport.
+Direct bidirectional connectivity between Teleport and Azure is necessary for Azure to 
+validate the OIDC tokens issued by Teleport.
 
 
 #### System credentials
 
-Designed for air-gapped Teleport clusters that are not publicly accessible, this setup accommodates 
-environments where Azure cannot validate OIDC tokens issued by Teleport. Instead, Teleport relies 
-on Azure credentials available on the VMs where Teleport Auth Service is running.
+Designed for air-gapped Teleport clusters that are not publicly accessible, this setup 
+accommodates environments where Azure cannot validate OIDC tokens issued by Teleport. 
+Instead, Teleport relies on Azure credentials available on the VMs where Teleport 
+Auth Service is running.
 
 In both the cases, the credential should have the following API permissions at minimum.
 ```code 
@@ -61,8 +61,8 @@ In both the cases, the credential should have the following API permissions at m
 - User.Read.All
 ```
 
-By default, the guided OIDC configuration sets a broader scoped permission, which 
-is required by the Idenitty Security product to perform policy and access path analysis.
+By default, the guided OIDC IdP configuration sets a broader scoped permission, which 
+is required by the Identity Security product to perform policy and access path analysis.
 ```code
 - Application.Read.All
 - Directory.Read.All
@@ -73,15 +73,15 @@ is required by the Idenitty Security product to perform policy and access path a
 
 - Teleport Identity Governance enabled for your account. Optionally, Identity Security should
 also be enabled if you choose to enable Identity Security integration.
-- Your user must have privileged administrator permissions in the Azure account
-- For OIDC setup, the Teleport cluster must be publicly accessible from the internet.
+- Your user must have privileged administrator permissions in the Azure account.
+- For the OIDC IdP setup, the Teleport cluster must be publicly accessible from the internet.
 - For air gapped clusters, `tctl` must be v16.4.7 or later.
 
 
 ## Guided Configuration
 
 The guided configuration expects setting up a new Entra ID auth connector and OIDC
-Integration as a default. 
+IdP integration as a default. 
 
 <Tabs groupId="entra-id">
 <TabItem label="Teleport as OIDC provider (Web UI)" >
@@ -90,16 +90,15 @@ Integration as a default.
 In the Teleport Web UI, from the side-navigation, select “Add New > Integration”.
 
 In the integration UI, select the “Microsoft Entra ID” tile. 
-![Integrations](../../img/igs/entraid/entra-tile.png)
-
+![Entra ID Integration](../../img/igs/entraid/entra-tile.png)
 
 In the Microsoft Entra ID configuration UI, you will notice a default integration name “entra-id”
 is already populated for you. You will need to select Teleport user(s) that will be assigned as 
 the default owner of Access Lists that are created for your Entra ID groups. 
 
-In the next step, you will be provided with a Entra ID configuration script.
+![Entra ID Integration](../../img/igs/entraid/entra-default-owners.png)
 
-![Integrations](../../img/igs/entraid/entra-default-owners.png)
+In the next step, you will be provided with a Entra ID configuration script.
 
 ## Step 2/3: Configure Entra ID
 
@@ -111,7 +110,7 @@ Once the script is done setting up the necessary permissions,
 it prints out tenant ID and client ID. Copy these values and provide it to the
 Web UI to finish the integration.
 
-![Integrations](../../img/igs/entraid/entra-finish.png)
+![Entra ID Integration](../../img/igs/entraid/entra-finish.png)
 
 </TabItem>
 
@@ -119,7 +118,7 @@ Web UI to finish the integration.
 
 ## Step 1/3: Generate configuration script (tctl)
 
-To begin integration, run `tctl plugins install entraid` command.
+To begin integration, run the `tctl plugins install entraid` command.
 
 ```code
 $ tctl plugins install entraid \
@@ -131,12 +130,9 @@ $ tctl plugins install entraid \
     –-no-access-graph 
 
 Step 1: Run the Setup Script
-
 ...
 
-To rerun the script, type 'exit' to close and then restart the process.
-
-Once the script completes, type 'continue' to proceed, 'exit' to quit: exit
+Once the script completes, type 'continue' to proceed, 'exit' to quit: 
 ```
 
 ## Step 2/3: Configure Entra ID (tctl)
@@ -158,15 +154,16 @@ importing resources from Entra ID to Teleport.
 ## Manual configuration
 
 Manual configuration may be preferable if you wish to have more control on the 
-Entra ID configuration. 
+Entra ID configuration. Below, an OIDC IdP based manual configuration is 
+demonstrated. 
 
-## Step 1/5. Create Enterprise Application
+## Step 1/5. Create enterprise application
 
 In the Azure Portal, under “Azure services”, select “Enterprise applications”.
 Click on `+ New Application` button, then click `+ Create your own application` button.
 Enter a name for your application and create the application.
 
-![Integrations](../../img/igs/entraid/entra-create-enterprise-app.png)
+![Entra ID Integration](../../img/igs/entraid/entra-create-enterprise-app.png)
 
 
 ## Step 2/5. Configure SSO
@@ -178,15 +175,16 @@ as an SAML servicer provider.
 
 Click edit button to configure  “Basic SAML Configuration”.
 Enter the SAML assertion endpoint as Entity ID and ACS URL value.
-- **Entity ID and ACS URL:** SAML ACS endpoint of your Teleport cluster. E.g.  `https://<teleport cluster addr>/v1/webapi/saml/acs/entra-id`
+- **Entity ID and ACS URL:** SAML ACS endpoint of your Teleport cluster. 
+E.g. `https://<teleport cluster addr>/v1/webapi/saml/acs/entra-id`
 
 For “Attributes & Claims”, attributes with user will already be available for you but you will need to 
 add a `groups` claim. 
 
-![Integrations](../../img/igs/entraid/entra-sso-config.png)
+![Entra ID Integration](../../img/igs/entraid/entra-sso-config.png)
 
 
-## Step 3/5. (Optional) Setting up OIDC IDP
+## Step 3/5. Configure OIDC IdP
 
 Under “App registrations” from Azure services menu, find and open your enterprise
 application created in step 1.
@@ -206,25 +204,26 @@ Under “Credential details”, configure the following values:
 - **Name:** teleport-oidc
 - **Description:** Teleport OIDC Identity Provider
 
-![Integrations](../../img/igs/entraid/entra-setup-oidc.png)
+![Entra ID Integration](../../img/igs/entraid/entra-setup-oidc.png)
 
 ## Step 4/5. Configure API permissions
 
 Under the same App registration UI for your enterprise application, select “Manage > API permissions”.
 
-You can add a new graph permission by clicking on `+ Add a permission` button and then selecting “Microsoft Graph > Application permissions”.
+You can add a new graph permission by clicking on `+ Add a permission` button and then selecting 
+“Microsoft Graph > Application permissions”.
 
 The following permissions needs to be added to the application. 
 - `Application.ReadWrite.OwnedBy`
 - `Group.Read.All`
 - `User.Read.All`
 
-![Integrations](../../img/igs/entraid/entra-api-permission.png)
+![Entra ID Integration](../../img/igs/entraid/entra-api-permission.png)
 
 
-## Step 5/5. Install Entra ID plugin
+## Step 5/5. Install the Entra ID plugin
 
-Now run `tctl plugins install entraid` command.
+Now run the `tctl plugins install entraid` command.
 
 ```code
 $ tctl plugins install entraid \
