--- a/docs/pages/includes/identity-governance/azure-shell.mdx
+++ b/docs/pages/includes/identity-governance/azure-shell.mdx
@@ -1,9 +1,11 @@
 Open Azure Cloud Shell by navigating to <a href="https://shell.azure.com">shell.azure.com</a>,
-or by clicking the Cloud Shell icon in the Azure Portal. Make sure to use the Bash version of Cloud Shell.
-Once a Cloud Shell instance opens, paste the generated bash script that downloads the Teleport binary in your Azure Shell and runs the `teleport integration configure azure-oidc` command. The command:
+or by clicking the Cloud Shell icon in the Azure Portal. Make sure to use the bash version of Cloud Shell.
+Once a Cloud Shell instance opens, paste the generated bash script that downloads the Teleport binary in your 
+Azure Shell and runs the `teleport integration configure azure-oidc` command. 
+The command performs the following actions:
 - Creates an enterprise application.
 - Configures Teleport as an OIDC IdP for the application.
-- Assigns Azure permission to the application.  Teleport read-only permissions to read your directory's data (such as users and groups in the directory).
+- Assigns read-only Microsoft Graph API permissions to read your directory's data (such as users and groups).
 - Configures authentication by setting up a Teleport SAML service provider.
 
 ```code
