--- a/docs/pages/identity-governance/entra-id.mdx
+++ b/docs/pages/identity-governance/entra-id.mdx
@@ -46,28 +46,12 @@ permissions tied to it without requiring additional credentials or managed Ident
 Direct bidirectional connectivity between Teleport and Azure is necessary for Azure to 
 validate the OIDC tokens issued by Teleport.
 
-
 #### System credentials
 
 Designed for air-gapped Teleport clusters that are not publicly accessible, this setup 
 accommodates environments where Azure cannot validate OIDC tokens issued by Teleport. 
 Instead, Teleport relies on Azure credentials available on the VMs where Teleport 
 Auth Service is running.
-
-In both the cases, the credential should have the following API permissions at minimum.
-```code 
-- Application.ReadWrite.OwnedBy
-- Group.Read.All
-- User.Read.All
-```
-
-By default, the guided OIDC IdP configuration sets a broader scoped permission, which 
-is required by the Identity Security product to perform policy and access path analysis.
-```code
-- Application.Read.All
-- Directory.Read.All
-- Policy.Read.All
-```
 
 ## Prerequisites
 
@@ -238,3 +222,46 @@ $ tctl plugins install entraid \
 application created in step 1.
 
 Once you enter these values, Entra ID plugin will be installed with the OIDC IdP based authentication method.
+
+## FAQ
+
+### What resources are imported to Teleport?
+
+Teleport imports all the users, user groups and its members from the Entra ID directory.
+There is no filter available to control custom import rules.
+
+If Teleport Identity Security integration is enabled, Teleport will import 
+applications and policies as well. 
+
+### How does it work with nested Access Lists?
+
+If an Entra ID group is assigned as a member to another group, Teleport preserves this assignment 
+as a nested Access List. 
+
+However, note that Teleport does not support recursive groups where group A is a member of group B
+and group B is also a member of group A.
+
+### What permissions does Teleport need to authenticate with the Microsoft Graph API?
+
+At minimum, Teleport needs read access to users, groups and the main enterprise application 
+for which the integration is configured.
+```code 
+- Application.ReadWrite.OwnedBy
+- Group.Read.All
+- User.Read.All
+```
+
+If you enable Identity Security integration, you will need a broader sets of permission.
+```code
+- Application.Read.All
+- Directory.Read.All
+- Policy.Read.All
+```
+
+By default, the guided OIDC IdP configuration requests a broader scoped permission, which 
+is required by the Identity Security product to perform policy and access path analysis.
+
+## Next steps
+
+- Take a deeper look into setting up [Entra ID auth connector](../../zero-trust-access/sso/azuread). 
+- Learn more about [Access List](../access-lists) management.
